# swarm-communauto

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yml
swarm_communauto/: __init__.py  __main__.py  communauto.py  distance.py  local_config.py  model.py  mqtt.py
tests/: test_swarm_communauto.py
