[tool.poetry]
name = "swarm-communauto"
version = "0.1.0"
description = ""
authors = ["Donald A C Martin <donald@donald-martin.ca>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
geopy = "^2.2.0"
paho-mqtt = "^1.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"
pylint = "^2.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
